--- a/inst/extra/SimulationStudies.Rmd
+++ b/inst/extra/SimulationStudies.Rmd
@@ -23,6 +23,7 @@ relative\_bias(\tilde{V}_{BR}^{12})&=\frac{\tilde{V}_{BR}^{12}-V_{BR}^{12}}{V_{B
 \end{aligned}
 \]
 
+
 ```{r eval=FALSE, include=TRUE}
 # First Parameter set
 alpha.list = seq(2,20,1)
@@ -37,7 +38,9 @@ sigma.list =seq(0.1,2,0.1)
 result.validSimulation.sigmaC <- validateSimulation(alpha.list, sigma.list)
 ```
 
+
 In Figure 1, we show the relative bias between Monte Carlo estimates $\tilde{V}_{WR}^{12},\tilde{V}_{BR}^{12}$ and the derived theoretical value $V_{WR}^{12},V_{BR}^{12}$ while varying the reader related parameter $\alpha_R$ and case related parameter $\sigma_C^2$. The dashed horizontal lines in each of the subplots denote the 0 bias between the Monte Carlo estimation and theoretical values. As shown in the figures, the relative bias is distributed tightly around 0 and the absolute value of the relative bias is less than 1% for most of the cases. There is no linear trend of the relative bias with respect to the changes of the parameter settings, which indicates that the bias is independent of the magnitudes of the theoretical value. 
+
 
 ```{r}
 library(ggplot2)
@@ -96,15 +99,20 @@ CV(\hat{V}_{WR}^{12})&=\frac{SD(\hat{V}_{WR}^{12})}{V_{WR}^{12}}
 \]
 where $SD()$ denotes the sample standard deviation across $T=1000$ Monte Carlo trials.
 We tested on the following three sets of parameters:
-* Different number of readers $J=3,4,…,10,K=100, \alpha_R=10, \sigma_C^2=1$
-* Different number of cases  $K=50,60,…,150, J=5, \alpha_R=10, \sigma_C^2=1$
-* Different reader and case variabilities  $(\alpha_R,\sigma_C^2)\in\{3,4,6,11,21\}\times\{0.1,0.2,0.4,\frac{2}{3},1\}, J=5, K=100$
+
+1. Different number of readers $J=3,4,…,10,K=100, \alpha_R=6, \sigma_C^2=0.4$
+
+2. Different number of cases  $K=50,60,…,150, J=5, \alpha_R=6, \sigma_C^2=0.4$
+
+3. Different reader and case variabilities  $(\alpha_R,\sigma_C^2)\in\{3,4,6,11,21\}\times\{0.1,0.2,0.4,\frac{2}{3},1\}, J=5, K=100$
+
 The range of $\alpha_R$ and $\sigma_C^2$ in the third set was selected based on the weights of parameters in theoretical value $V_{BR}^{12}$. When $\beta_R=\beta_{\tau R}=1, \alpha_R=\alpha_{\tau R}, \sigma_C^2=\sigma_{\tau C}^2$,
 
 \[
 V_{BR}^{12}=\frac{2\beta_R}{\alpha_R-1}+2\sigma_{\tau C}^2+\frac{2\beta_{\tau R}}{\alpha_{\tau R-1}}=\frac{4}{\alpha_R-1}+2\sigma_C^2
 \]
 To make sure both $\alpha_R$ and $\sigma_C^2$  range from low variability to high variability and contribute to V_BRBM at the similar level, we selected the parameters so that $\frac{4}{\alpha_R-1}$ and $2\sigma_C^2$ can be at 5 different levels: 0.2,0.4,0.8, 4⁄3, 2. Hence, the theoretical value $V_{BR}^{12}$ ranged from 0.4 to 4.
+
 
 ```{r eval=FALSE, include=TRUE}
 # First Parameter set
@@ -135,7 +143,9 @@ result.validMRMCVarEstimate.parameter <- validateMRMCVarEstimation(nR.list, nC.l
                                                                    alpha.list, sigma.list)
 ```
 
+
 Figure 2 and Figure 3 present the relative bias and CV of the variance estimates of BRBM differences changing over different sets of parameters. The plots for the WRBM differences share the similar pattern, so only the ones for the BRBM difference are shown. In Figure 2, plots (a) and (c) show the results when the number of readers ranges from 3 to 10 and the number of cases is 100, while (b) and (d) shows the results when the number of cases changes from 50 to 150 and the number of readers is 5. In both settings, the relative bias observed is small. This is comparable to the relative bias in the previous study. When we compare the CVs for the two sets of simulation parameters, the CVs of the variance estimates of BRBM in both plots (c) and (d)  decreases smoothly as the number of readers or cases increases. This is because as we increase the size of the MRMC study, the variance estimate is more precise for each simulation study. Therefore, the variation across all the simulation studies will decrease.
+
 
 ```{r}
 # First Parameter set
@@ -177,7 +187,9 @@ do.call("grid.arrange", c(list(p1,p3,p2,p4), ncol=2))
 ```
 Figure 2 Relative bias and CV of variance estimation for BRBM difference changing over the size of the study
 
+
 Figure 3 describes how the relative bias and CV of the variance estimate for BRBM differences change over the reader and case related parameters, $\alpha_R$ and  $\sigma_C^2$. There are 5 readers and 100 cases in each MRMC study. From Figure 3(a) we can see that most of the points lie within the range of ±1%. The line with solid dot($\alpha_R=3$) has the largest fluctuation comparing to other lines.  This is the setting that involves the largest reader variability, so it is expected that the variance of differences, especially for the between-reader difference, will be less stable than the results for other parameter settings. This can also be confirmed in Figure 3(b); the line for $\alpha_R=3$  (line with solid dot) has the highest CV for each $\sigma_C^2$. Generally, as $\alpha_R$ increases, the CV drops, since the reader variability in the study decreases. As we increase the case related parameter $\sigma_C^2$, the case variability increases and it will dominate the variability from the readers, since the number of cases is much larger than that for the readers. Therefore, the lines in Figure 3(b) will be closer to each other when the $\sigma_C^2$ increases from 0.1 to 1.
+
 
 ```{r}
 # Third Parameter set
